removed url tags in pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,5 @@ dependencies = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/B0-B/blowtorch-transformer-api"
-Examples = "https://github.com/B0-B/blowtorch-transformer-api/tree/main/examples"
-Latest = "pip install https://b0-b.github.io/blowtorch-transformer-api/dist/"
+Homepage = "https://github.com/B0-B/ZipLin3"
+Examples = "https://github.com/B0-B/ZipLin3?tab=readme-ov-file#usage"
